Estrutura html iniciada

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Instagram</title>
 </head>
 <body>
-    
+    <div class="instagram-wrapper">
+        <div class="instagram-form">
+            <img src="./img/insta_celular.png" alt="celular com página aberta do instagram">
+        </div>
+        <div class="instagram-continue">
+            <div class="group">
+                <img src="./img/Instagram-Logo.png" class="instagram-logo" alt="instagram logo">
+                <div class="profile-picture">
+                    <img src="./img/profile-picture" alt="foto de perfil">
+                </div>
+                <a href="#" class="instagram-login">Continue como OrleansCaio</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
