--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="instagram-wrapper">
-        <div class="instagram-form">
+        <div class="instagram-phone">
             <img src="./img/insta_celular.png" alt="celular com página aberta do instagram">
         </div>
         <div class="instagram-continue">
