--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css.css">
     <title>Instagram</title>
 </head>
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./img/insta_celular.png" alt="celular com página aberta do instagram">
+            <img src="./img/insta-phone.png" alt="celular com página aberta do instagram">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./img/Instagram-Logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="./img/Instagram_logo.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-picture">
-                    <img src="./img/profile-picture" alt="foto de perfil">
+                    <img src="./img/profile-picture.jpg" alt="foto de perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue como OrleansCaio</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
                 <p class="not-account">Não é OrleansCaio?</p>
-                <p class="notaccount">
+                <p class="not-account">
                     <span class="link-blue">Alterar contas</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
